tip ie8/9 overflow bug fix.

--- a/client/client/skins/inherent/tip.css
+++ b/client/client/skins/inherent/tip.css
@@ -74,7 +74,6 @@
 
 .i-tip .tip-cr{
 	padding-right: 6px;
-	overflow: auto;
 }
 
 .i-tip .tip-cm{
